--- a/brian.html
+++ b/brian.html
@@ -16,8 +16,34 @@
     </header>
 
     <main>
-        <h2>Een mooie titel</h2>
-        <p>Dit is een omschrijving. Dit is een omschrijving. Dit is een omschrijving. Dit is een omschrijving.</p>
+        <article>
+            <section>
+                <div class="container">
+                    <div class="inner-container">
+                        <h2>Een mooie titel</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="container">
+                    <div class="inner-container">
+                        <h2>Een mooie titel</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                </div>
+            </section>
+        </article>
     </main>
 </body>
 
