--- a/brian.html
+++ b/brian.html
@@ -16,6 +16,14 @@
     </header>
 
     <main>
+        <section>
+            <div class="container hero">
+                <div class="inner-container">
+                    <h1 class="herotitle">Brian van der Put</h1>
+                    <p class="herotext">Front-end developer</p>
+                </div>
+            </div>
+        </section>
         <article>
             <section>
                 <div class="container">
