--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Huisgenoten</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/homepage.css" />
     
 </head>
 
 <body>
+    <header>
+        <div class="headerWrapper">
+            <img class="homepage-banner" src="images/huisgenoten.svg" alt="room"/>
+        </div>
+    </header>
+
     <button onclick="window.location.href = 'brian.html'">klik</button>
     <ul>
         <li><a href="ben.html">Ben</a></li>
-        <li><a href="Manouk.html">Manouk</a></li>
-        <li><a href="Rosa.html">Rosa</a></li>
-        <li><a href="Kaylee.html">Kaylee</a></li>
-        <li><a href="Brian.html">Brian</a></li>
+        <li><a href="manouk.html">Manouk</a></li>
+        <li><a href="rosa.html">Rosa</a></li>
+        <li><a href="kaylee.html">Kaylee</a></li>
+        <li><a href="brian.html">Brian</a></li>
       </ul>
 </body>
 
