--- a/brian.html
+++ b/brian.html
@@ -24,6 +24,17 @@
                 </div>
             </div>
         </section>
+
+        <div class="tabContainer">
+            <div class="buttonContainer">
+                <button class="showcaseButton" onclick="showPanel(0)">Showcase 1</button>
+                <button class="showcaseButton" onclick="showPanel(1)">Showcase 2</button>
+                <button class="showcaseButton" onclick="showPanel(2)">Showcase 3</button>
+                
+            </div>
+        
+
+        <div class="tabPanel"> Tab 1:Content
         <article>
             <section>
                 <div class="container">
@@ -57,7 +68,15 @@
                 </div>
             </section>
         </article>
+        </div>
+        <div class="tabPanel">Tab 2: content</div>
+        <div class="tabPanel">Tab 3: content</div>
+    </div>
     </main>
+
+    <script src="myScript.js"> </script>
 </body>
+
+
 
 </html>
