--- a/rosa.html
+++ b/rosa.html
@@ -18,7 +18,29 @@
     <main>
         <h2>Een mooie titel</h2>
         <p>Dit is een omschrijving. Dit is een omschrijving. Dit is een omschrijving. Dit is een omschrijving.</p>
+
+        <div class="buttonContainer">
+            <button class="showcaseButton" onclick="openShowcase('1')">Showcase 1</button>
+            <button class="showcaseButton" onclick="openShowcase('2')">Showcase 2</button>
+            <button class="showcaseButton" onclick="openShowcase('3')">Showcase 3</button>
+          </div>
+
+          <div id="1" class="w3-container Showcase">
+            <h2>London</h2>
+            <p>London is the capital city of England.</p>
+          </div>
+          
+          <div id="2" class="w3-container Showcase" style="display:none">
+            <h2>Paris</h2>
+            <p>Paris is the capital of France.</p> 
+          </div>
+          
+          <div id="3" class="w3-container Showcase" style="display:none">
+            <h2>Tokyo</h2>
+            <p>Tokyo is the capital of Japan.</p>
+          </div>
     </main>
+    <script src="rosaScript.js"></script>
 </body>
 
 </html>
