--- a/brian.html
+++ b/brian.html
@@ -16,30 +16,29 @@
     </header>
 
     <main>
-        <section>
+        <article>
             <div class="container hero">
                 <div class="inner-container">
                     <h1 class="herotitle">Brian van der Put</h1>
                     <p class="herotext">Front-end developer</p>
                 </div>
             </div>
-        </section>
+        </article>
 
-        <div class="tabContainer">
-            <div class="buttonContainer">
-                <button class="showcaseButton" onclick="showPanel(0)">Showcase 1</button>
-                <button class="showcaseButton" onclick="showPanel(1)">Showcase 2</button>
-                <button class="showcaseButton" onclick="showPanel(2)">Showcase 3</button>
-                
+            <div class="buttonContainer container">
+                <button class="showcaseButton" onclick="openShowcase('1')">Showcase 1</button>
+                <button class="showcaseButton" onclick="openShowcase('2')">Showcase 2</button>
+                <button class="showcaseButton" onclick="openShowcase('3')">Showcase 3</button>
             </div>
         
 
-        <div class="tabPanel"> Tab 1:Content
+
+        <div id="1" class="w3-container Showcase">
         <article>
             <section>
                 <div class="container">
                     <div class="inner-container">
-                        <h2>Een mooie titel</h2>
+                        <h2>Showcase 1</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
@@ -69,8 +68,76 @@
             </section>
         </article>
         </div>
-        <div class="tabPanel">Tab 2: content</div>
-        <div class="tabPanel">Tab 3: content</div>
+        <div id="2" class="w3-container Showcase" style="display:none">
+            <article>
+                <section>
+                    <div class="container">
+                        <div class="inner-container">
+                            <h2>Showcase 2</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+                            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="container">
+                        <div class="row">
+                            <div class="section-content">
+                                <h2>Een mooie titel</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                            <figure>
+                                <img class="img-styling" src="images/example.jpg" alt="example">
+                            </figure>
+                        </div>
+                    </div>
+                </section>
+            </article>
+        </div>
+        <div id="3" class="w3-container Showcase" style="display:none">
+            <article>
+                <section>
+                    <div class="container">
+                        <div class="inner-container">
+                            <h2>Showcase 3</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+                            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="container">
+                        <div class="row">
+                            <div class="section-content">
+                                <h2>Een mooie titel</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                            <figure>
+                                <img class="img-styling" src="images/example.jpg" alt="example">
+                            </figure>
+                        </div>
+                    </div>
+                </section>
+            </article>
+        </div>
     </div>
     </main>
 
