--- a/brian.html
+++ b/brian.html
@@ -17,7 +17,7 @@
 
     <main>
         <article>
-            <div class="container hero">
+            <div class="hero">
                 <div class="inner-container">
                     <h1 class="herotitle">Brian van der Put</h1>
                     <p class="herotext">Front-end developer</p>
