--- a/manouk.html
+++ b/manouk.html
@@ -16,9 +16,136 @@
     </header>
 
     <main>
-        <h2>Een mooie titel</h2>
-        <p>Dit is een omschrijving. Dit is een omschrijving. Dit is een omschrijving. Dit is een omschrijving.</p>
+        <article>
+            <div class="hero">
+                <div class="inner-container">
+                    <h1 class="herotitle">Manouk Kuyper</h1>
+                    <p class="herotext">Grafisch ontwerper</p>
+                </div>
+            </div>
+        </article>
+
+            <div class="buttonContainer container">
+                <button class="showcaseButton" onclick="openShowcase('1')">Showcase 1</button>
+                <button class="showcaseButton" onclick="openShowcase('2')">Showcase 2</button>
+                <button class="showcaseButton" onclick="openShowcase('3')">Showcase 3</button>
+            </div>
+        
+
+
+        <div id="1" class="w3-container Showcase">
+        <article>
+            <section>
+                <div class="container">
+                    <div class="inner-container">
+                        <h2>Showcase 1</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                    <figure>
+                        <img class="img-styling" src="images/iso-manouk.jpg" alt="example">
+                    </figure>
+                </div>
+            </section>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="section-content">
+                            <h2>Een mooie titel</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+                            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                        <figure>
+                            <img class="img-styling" src="images/example.jpg" alt="example">
+                        </figure>
+                    </div>
+                </div>
+            </section>
+        </article>
+        </div>
+        <div id="2" class="w3-container Showcase" style="display:none">
+            <article>
+                <section>
+                    <div class="container">
+                        <div class="inner-container">
+                            <h2>Showcase 2</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+                            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="container">
+                        <div class="row">
+                            <div class="section-content">
+                                <h2>Een mooie titel</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                            <figure>
+                                <img class="img-styling" src="images/example.jpg" alt="example">
+                            </figure>
+                        </div>
+                    </div>
+                </section>
+            </article>
+        </div>
+        <div id="3" class="w3-container Showcase" style="display:none">
+            <article>
+                <section>
+                    <div class="container">
+                        <div class="inner-container">
+                            <h2>Showcase 3</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+                            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="container">
+                        <div class="row">
+                            <div class="section-content">
+                                <h2>Een mooie titel</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                            <figure>
+                                <img class="img-styling" src="images/example.jpg" alt="example">
+                            </figure>
+                        </div>
+                    </div>
+                </section>
+            </article>
+        </div>
+    </div>
     </main>
+
+    <script src="myScript.js"> </script>
 </body>
+
 
 </html>
