--- a/kaylee.html
+++ b/kaylee.html
@@ -3705,7 +3705,7 @@
                                     </g>
                                 </g>
                             </g>
-                            <g>
+                            <g  id="Sims_kristal">
                                 <path class="cls-189"
                                     d="M1235.66,213.13c-.05,.22-.05,.5-.34,.52-.24,.02-.17-.24-.2-.39-.01-.24,.01-.49-.04-.72-.8-3.38-1.62-6.77-2.42-10.15-.89-3.76-1.76-7.53-2.64-11.3-.14-.64-.27-1.29-.43-1.93-1.37-5.76-2.73-11.52-4.12-17.27-.07-.29-.12-.52,.08-.75,.52-.24,1.04-.48,1.55-.73,7.08-3.44,14.04-7.13,21.04-10.72-.63,2.69-1.26,5.37-1.88,8.06-.64,2.78-1.27,5.55-1.9,8.33-.27,.26-.17,.63-.24,.94-2.33,9.77-4.65,19.55-6.94,29.33-.53,2.25-1.17,4.48-1.53,6.77h0Z" />
                                 <path class="cls-190"
@@ -3943,7 +3943,7 @@
                                 <rect class="cls-32" x="529.8" y="475.33" width="7.6" height=".51" />
                             </g>
                             <g>
-                                <g class="cls-85">
+                                <g class="cls-85 blender-object">
                                     <polygon class="cls-180"
                                         points="527.2 525.71 540 525.71 527.72 554.42 514.92 554.42 527.2 525.71" />
                                     <polygon class="cls-180"
@@ -4964,7 +4964,7 @@
             <article>
                 <div class="hero">
                     <div class="inner-container">
-                        <h1 class="herotitle">Brian van der Put</h1>
+                        <h1 class="herotitle">Kaylee Scholtes</h1>
                         <p class="herotext">Front-end developer</p>
                     </div>
                 </div>
