--- a/rosa.html
+++ b/rosa.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="styles/rosa.css">
     <link rel="stylesheet" href="styles/main.css">
-    
+    <title> Dit is een titel</title>
 </head>
 
 <body>
