making nav - new banner image

--- a/brian.html
+++ b/brian.html
@@ -10,6 +10,16 @@
 
 <body>
     <header>
+        <nav>
+            <ul>
+                <a href="#"><li>Home</li></a>
+                <a href="#"><li>Ben</li></a>
+                <a href="#"><li>Brian</li></a>
+                <a href="#" class="active"><li>Kaylee</li></a>
+                <a href="#"><li>Manouk</li></a>
+                <a href="#"><li>Rosa</li></a>
+            </ul>     
+        </nav>
         <div class="headerWrapper">
             <?xml version="1.0" encoding="UTF-8"?><svg xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1000">
@@ -2581,7 +2591,6 @@
             <div class="hero">
                 <div class="inner-container">
                     <h1 class="herotitle">Brian van der Put</h1>
-                    <p class="herotext">Front-end developer</p>
                 </div>
             </div>
         </article>
