--- a/rosa.html
+++ b/rosa.html
@@ -20,8 +20,7 @@
         <article>
             <div class="hero">
                 <div class="inner-container">
-                    <h1 class="herotitle">Brian van der Put</h1>
-                    <p class="herotext">Front-end developer</p>
+                    <h1 class="herotitle">Rosa swarte</h1>
                 </div>
             </div>
         </article>
