--- a/brian.html
+++ b/brian.html
@@ -10,14 +10,14 @@
 
 <body>
     <header>
-        <nav>
+        <nav class="nav">
             <ul>
-                <a href="#"><li>Home</li></a>
-                <a href="#"><li>Ben</li></a>
-                <a href="#"><li>Brian</li></a>
-                <a href="#" class="active"><li>Kaylee</li></a>
-                <a href="#"><li>Manouk</li></a>
-                <a href="#"><li>Rosa</li></a>
+                <a class="nav-item home" href="index.html"><li>Home</li></a>
+                <a class="nav-item ben" href="ben.html"><li>Ben</li></a>
+                <a class="nav-item brian" href="brian.html"><li>Brian</li></a>
+                <a class="nav-item kaylee" href="kaylee.html" class="active"><li>Kaylee</li></a>
+                <a class="nav-item manouk" href="manouk.html"><li>Manouk</li></a>
+                <a class="nav-item rosa" href="rosa.html"><li>Rosa</li></a>
             </ul>     
         </nav>
         <div class="headerWrapper">
@@ -2710,7 +2710,14 @@
         </div>
         </div>
     </main>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js" integrity="sha512-5/OHwmQzDSBS0Ous4/hlYoWLHd06/d2r7LdKZQVBXOA6PvOqWVXtdboiLTU7lQTGyVoKVTNkwi0ol4gHGlw5ww==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/plugins/CSSPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/MotionPathPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="myScript.js"> </script>
 </body>
 
