--- a/brian.html
+++ b/brian.html
@@ -2596,9 +2596,9 @@
         </article>
 
         <div class="buttonContainer container">
-            <button class="showcaseButton" onclick="openShowcase('1')">Showcase 1</button>
-            <button class="showcaseButton" onclick="openShowcase('2')">Showcase 2</button>
-            <button class="showcaseButton" onclick="openShowcase('3')">Showcase 3</button>
+            <button class="showcaseButton" onclick="openShowcase('1')">React-native App</button>
+            <button class="showcaseButton" onclick="openShowcase('2')">Design system</button>
+            <button class="showcaseButton" onclick="openShowcase('3')">Lottie animations</button>
         </div>
 
 
@@ -2608,13 +2608,18 @@
                 <section>
                     <div class="container">
                         <div class="inner-container">
-                            <h2>Showcase 1</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <h2>React-native App</h2>
+                            <p>Mijn eerste leerdoel was het leren werken met React-native om
+                                dit vervolgens toe te passen in een mobiele app.
+                                Het idee was om een simpele ecommerce app te maken voor sneakers. 
+                                Ik vond het belangrijk om ook verschillende functionaleiten toe te voegen aan de app.
+
+                                - Een homepage waar verschillende aanbiedingen/acties te zien zijn
+                                - Producten moeten toe te voegen zijn aan een winkelmandje
+                                - De totale prijs moet berekend worden van jouw winkelmandje
+                                
+                                Zie hiernaast een demo film van de app!
+                            </p>
                         </div>
                     </div>
                 </section>
@@ -2630,9 +2635,9 @@
                                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
                                     non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                             </div>
-                            <figure>
-                                <img class="img-styling" src="images/example.jpg" alt="example">
-                            </figure>
+                            <iframe  class="img-styling"
+                                src="https://www.youtube.com/shorts/dOQ8Vvzfmlw">
+                            </iframe>
                         </div>
                     </div>
                 </section>
@@ -2643,13 +2648,12 @@
                 <section>
                     <div class="container">
                         <div class="inner-container">
-                            <h2>Showcase 2</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <h2>Design System</h2>
+                            <p>Voor mijn tweede leerdoel wilde ik een design system maken voor Nike.
+                                Tijdens mijn stage ben ik veel bezig geweest met ontwerpen en merkte ik
+                                dat geen goed systeem hiervoor had omdat ik dezelfde elementen steeds apart moest veranderen.
+                                Ik wist dat dit beter kon en ben daarom voor de 2e sprint een design system gaan maken.
+                            </p>
                         </div>
                     </div>
                 </section>
@@ -2657,13 +2661,26 @@
                     <div class="container">
                         <div class="row">
                             <div class="section-content">
-                                <h2>Een mooie titel</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <h2>Elementen Design System</h2>
+                                <p>Hieronder zie je een aantal elementen uit mijn design system. Deze elementen zijn
+                                    gemakkelijk te gebruiken bij het maken van een ontwerp en universeel aanpasbaar.
+                                </p>
+                            </div>
+                            <figure>
+                                <img class="img-styling" src="images/example.jpg" alt="example">
+                            </figure>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <div class="container">
+                        <div class="row">
+                            <div class="section-content">
+                                <h2>Toepassen van het design system</h2>
+                                <p>Hier zie je hoe ik alle elementen van het design system heb toegepast om pagina's te maken.
+                                    Door een design system te maken kon ik binnen no time een pagina maken. Ook zijn deze pagina's
+                                    gemakkelijk aanpasbaar, omdat het opgeboud is uit componenten.
+                                </p>
                             </div>
                             <figure>
                                 <img class="img-styling" src="images/example.jpg" alt="example">
@@ -2678,7 +2695,7 @@
                 <section>
                     <div class="container">
                         <div class="inner-container">
-                            <h2>Showcase 3</h2>
+                            <h2>Lottie files animations</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
