--- a/brian.html
+++ b/brian.html
@@ -2607,37 +2607,24 @@
             <article>
                 <section>
                     <div class="container">
-                        <div class="inner-container">
-                            <h2>React-native App</h2>
-                            <p>Mijn eerste leerdoel was het leren werken met React-native om
-                                dit vervolgens toe te passen in een mobiele app.
-                                Het idee was om een simpele ecommerce app te maken voor sneakers. 
-                                Ik vond het belangrijk om ook verschillende functionaleiten toe te voegen aan de app.
-
-                                - Een homepage waar verschillende aanbiedingen/acties te zien zijn
-                                - Producten moeten toe te voegen zijn aan een winkelmandje
-                                - De totale prijs moet berekend worden van jouw winkelmandje
-                                
-                                Zie hiernaast een demo film van de app!
-                            </p>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <div class="container">
                         <div class="row">
                             <div class="section-content">
-                                <h2>Een mooie titel</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <h2>React-native App</h2>
+                                <p>Mijn eerste leerdoel was het leren werken met React-native.
+                                    Dit wilde ik vervolgens toe passen om een mobiele app te maken.
+                                    Het idee was om een simpele ecommerce app te maken voor sneakers. 
+                                    Ik vond het belangrijk om ook verschillende functionaleiten toe te voegen aan de app.
+                                    <br><br>
+                                    - Een homepage waar verschillende aanbiedingen/acties te zien zijn
+                                    <br>
+                                    - Producten moeten toe te voegen zijn aan een winkelmandje
+                                    <br>
+                                    - De totale prijs moet berekend worden van jouw winkelmandje
+                                    <br><br>
+                                    Zie hiernaast een demo film van de app!
+                                </p>
                             </div>
-                            <iframe  class="img-styling"
-                                src="https://www.youtube.com/shorts/dOQ8Vvzfmlw">
-                            </iframe>
+                            <iframe class=img-styling width="400" height="500" src="https://www.youtube.com/embed/dOQ8Vvzfmlw" title="React-native Sneaker App" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                 </section>
@@ -2659,34 +2646,40 @@
                 </section>
                 <section>
                     <div class="container">
-                        <div class="row">
                             <div class="section-content">
                                 <h2>Elementen Design System</h2>
                                 <p>Hieronder zie je een aantal elementen uit mijn design system. Deze elementen zijn
                                     gemakkelijk te gebruiken bij het maken van een ontwerp en universeel aanpasbaar.
                                 </p>
                             </div>
+                            <div class="row">
                             <figure>
-                                <img class="img-styling" src="images/example.jpg" alt="example">
+                                <img class="img-styling" src="images/showcase-brian/inputs.png" alt="inputs">
                             </figure>
+                            <figure>
+                                <img class="img-styling" src="images/showcase-brian/buttons.png" alt="buttons">
+                            </figure>
+                            </div>
                         </div>
-                    </div>
                 </section>
                 <section>
                     <div class="container">
-                        <div class="row">
                             <div class="section-content">
                                 <h2>Toepassen van het design system</h2>
-                                <p>Hier zie je hoe ik alle elementen van het design system heb toegepast om pagina's te maken.
+                                <p>Hier zie je hoe ik alle elementen van het design system heb toegepast om een pagina te maken.
                                     Door een design system te maken kon ik binnen no time een pagina maken. Ook zijn deze pagina's
                                     gemakkelijk aanpasbaar, omdat het opgeboud is uit componenten.
                                 </p>
                             </div>
-                            <figure>
-                                <img class="img-styling" src="images/example.jpg" alt="example">
-                            </figure>
+                            <div class="row">
+                                <figure>
+                                    <img class="img-styling" src="images/showcase-brian/page1.png" alt="demo-page">
+                                </figure>
+                                <figure>
+                                    <img class="img-styling" src="images/showcase-brian/page2.png" alt="demo-page">
+                                </figure>
+                                </div>
                         </div>
-                    </div>
                 </section>
             </article>
         </div>
