--- a/brian.html
+++ b/brian.html
@@ -20,6 +20,8 @@
                 <a class="nav-item rosa" href="rosa.html"><li>Rosa</li></a>
             </ul>     
         </nav>
+        <div id="parallax" class="parallax">
+        <div class="scrollElement"></div>
         <div class="headerWrapper">
             <?xml version="1.0" encoding="UTF-8"?><svg xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1000">
@@ -2584,6 +2586,7 @@
                 </g>
             </svg>
         </div>
+    </div>
     </header>
 
     <main>
