--- a/rosa.html
+++ b/rosa.html
@@ -10,6 +10,8 @@
 
 <body>
     <header>
+        <div id="parallax" class="parallax">
+            <div class="scrollElement"></div>
         <div class="headerWrapper">
             <?xml version="1.0" encoding="UTF-8"?><svg xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1000">
@@ -2567,6 +2569,7 @@
                 </g>
             </svg>
         </div>
+    </div>
     </header>
 
     <main>
