--- a/brian.html
+++ b/brian.html
@@ -2688,33 +2688,29 @@
                 <section>
                     <div class="container">
                         <div class="inner-container">
-                            <h2>Lottie files animations</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <h2>After Effects animaties</h2>
+                            <p>De laatste individuele sprint wilde ik graag iets compleet nieuws leren.
+                                Daarom heb ik als leerdoel om te leren werken met AE (After Effects)
+                                Als resultaat heb ik deze weken gewerkt aan veschillende Lottie animaties.
+                            </p>
                         </div>
                     </div>
                 </section>
                 <section>
                     <div class="container">
-                        <div class="row">
                             <div class="section-content">
-                                <h2>Een mooie titel</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <h2>Lottie animaties</h2>
+                                <p>Hier zie je een aantal lottie animaties die ik gemaakt heb</p>
                             </div>
-                            <figure>
-                                <img class="img-styling" src="images/example.jpg" alt="example">
-                            </figure>
-                        </div>
-                    </div>
+                                <div class="row-lottie">
+                                    <lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_iufulf90.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
+                                    <lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_4knllu0y.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
+                                    <lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_vg1bj9fl.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
+                                    <lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_8wj1cpo4.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
+                                    <lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_smsw7f1y.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
+                                    <lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_tcsjrjam.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
+                                </div>
+                            </div>
                 </section>
             </article>
         </div>
@@ -2729,6 +2725,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="myScript.js"> </script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </body>
 
 
