--- a/kaylee.html
+++ b/kaylee.html
@@ -3621,7 +3621,7 @@
                                 <circle class="cls-141" cx="1591.5" cy="765.5" r="5.5" />
                             </g>
                         </g>
-                        <g id="Vloerlamp">
+                        <g id="Vloerlamp_Kaylee">
                             <g>
                                 <path class="cls-86"
                                     d="M1766.09,325.61c5.03-3.53,21.95,11.93,37.8,34.52,15.84,22.59,24.61,43.77,19.58,47.29l-73.78,64.56-69.43-99,85.84-47.38Z" />
@@ -3743,7 +3743,7 @@
                                     d="M1234.85,149.31l-14.72,.03-.1-.18c1.02-4.33,2.05-8.66,3.07-12.99,.03-.14,.04-.3,.06-.44,.07-.11,.14-.23,.21-.34,1.31-.25,2.35-1.07,3.47-1.68,4.55-2.48,8.92-5.24,12.99-8.46,1.25-.99,2.46-2.02,3.69-3.03,.2-.17,.36-.42,.67-.42,.94,3.94,1.89,7.87,2.83,11.81-1,1.62-2.3,3.01-3.47,4.5-2.69,3.42-5.41,6.8-8.11,10.2-.24,.3-.57,.56-.58,1h0Z" />
                             </g>
                         </g>
-                        <g>
+                        <g id="PC_Kaylee">
                             <g>
                                 <path class="cls-272"
                                     d="M522.87,574.8v29.76c0,4.12-3.34,7.46-7.46,7.46s-7.46-3.34-7.46-7.46v-29.76h-9.56v66.62h34.03v-66.62h-9.55Z" />
@@ -3961,7 +3961,7 @@
                                 </g>
                             </g>
                         </g>
-                        <g>
+                        <g id="Star_wars_frame">
                             <rect class="cls-105" x="1117.25" y="262.23" width="147.94" height="217.33"
                                 transform="translate(1562.11 -820.33) rotate(90)" />
                             <g class="cls-129">
