--- a/brian.html
+++ b/brian.html
@@ -2114,7 +2114,7 @@
                             <path class="cls-86"
                                 d="M206.06,877.28v10.89c0,2.6-15.44,4.71-34.5,4.71s-34.5-2.11-34.5-4.71v-10.89c0-2.6,15.45-4.72,34.5-4.72s34.5,2.12,34.5,4.72Z" />
                         </g>
-                        <g id="bal">
+                        <g id="Bal">
                             <circle class="cls-17" cx="1697.5" cy="870.44" r="56.5" />
                             <g class="cls-35">
                                 <g>
@@ -2354,7 +2354,7 @@
                                     d="M1152.83,487.79h-8.12c-1.31-.16-2.45-.43-3.13-.89-.39-.26-.63-.58-.66-.98-.16-1.9,3.04-1.7,3.04-1.7h83.73l-1.95-.85h-84.3c-2.31,.24-2.31,2.39-2.31,2.39v1.68h.02c.1,.26,.74,1.38,4.44,1.88,.74,.1,4.14,.17,9.24,.2,24.02,.18,85.88-.2,85.88-.2v-1.54h-85.88Z" />
                             </g>
                         </g>
-                        <g>
+                        <g id="Lamp_Brian">
                             <g>
                                 <path class="cls-72"
                                     d="M690.89,439.89c-4.13-2.52-9.05-3.56-13.84-2.93-2.8,.37-5.53,.22-8.11-.44-.77-.2-1.55,.26-1.77,1.02-1.28,2.03-11.63,18.99-11.7,19.1-.33,.53-.28,1.24,.16,1.73,1.77,1.99,3.15,4.35,4.12,7.02,1.64,4.51,4.8,8.39,8.9,10.9,9.92,6.08,23.02,3.01,29.2-6.83,3.06-4.87,4.02-10.64,2.7-16.24-1.32-5.6-4.75-10.33-9.67-13.32Z" />
