ben video + content kaylee

--- a/kaylee.html
+++ b/kaylee.html
@@ -4973,8 +4973,8 @@
             </article>
     
                 <div class="buttonContainer container">
-                    <button class="showcaseButton" onclick="openShowcase('1')">Showcase 1</button>
-                    <button class="showcaseButton" onclick="openShowcase('2')">Showcase 2</button>
+                    <button class="showcaseButton" onclick="openShowcase('1')">Vinyl Record Collecting App</button>
+                    <button class="showcaseButton" onclick="openShowcase('2')">R2D2 in Blender</button>
                     <button class="showcaseButton" onclick="openShowcase('3')">Showcase 3</button>
                 </div>
             
@@ -4984,33 +4984,16 @@
             <article>
                 <section>
                     <div class="container">
-                        <div class="inner-container">
-                            <h2>Showcase 1</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
-                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-                            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <div class="container">
                         <div class="row">
                             <div class="section-content">
-                                <h2>Een mooie titel</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
-                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <h2>Vinyl Record Collecting App</h2>
+                            <p>In Figma heb ik gewerkt aan een clickable prototype van een 
+                                zelfbedachte applicatie voor vinylverzamelaars. Dit is een applicatie 
+                                die ik als verzamelaar mis en graag zou willen hebben. Daarnaast wilde 
+                                ik nog leren werken met het programma Figma. Het prototype is te zien 
+                                via deze <a href="https://www.figma.com/file/8mug14bGoTxUytBtLDEjZP/Hi-Fi-mockup?node-id=2%3A2"> link.</a>
                         </div>
-                            <figure>
-                                <img class="img-styling" src="images/example.jpg" alt="example">
-                            </figure>
-                        </div>
+                        <iframe class="img-styling" width="560" height="315" src="https://www.youtube.com/embed/UawkOpG2_Ck" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </section>
             </article>
@@ -5019,14 +5002,16 @@
                 <article>
                     <section>
                         <div class="container">
-                            <div class="inner-container">
-                                <h2>Showcase 2</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
-                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <div class="row">
+                                <div class="section-content">
+                                <h2>R2D2 in Blender</h2>
+                                <p>Een van de dingen die ik nog graag wilde leren, was 3D modelleren. 
+                                    Hiervoor heb ik het programma Blender gebruikt. In Blender heb 
+                                    ik from scratch een 3D model van R2D2 uit de Star Wars-franchise 
+                                    nagemaakt. Deze heb ik in verschillende versies doorontwikkeld tot 
+                                    het eindproduct, welke hiernaast te zien is.</p>
+                                </div>
+                                <iframe class="img-styling" width="560" height="315" src="https://www.youtube.com/embed/nubS3dBPSMQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
                     </section>
