--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
           <rect class="cls-10" x="1358.15" y="742.89" width="167.61" height="14.6" />
         </g>
         <a href="rosa.html">
-          <g id="Rosa_Compleet">
+          <g id="Rosa_Compleet" class="huiskamer">
             <g id="Rosa">
               <g>
                 <path class="cls-62"
@@ -658,7 +658,7 @@
           <line class="cls-5" x1="720.12" y1="684.15" x2="814.64" y2="692.16" />
         </g>
         <a href="manouk.html">
-          <g id="Manouk_Compleet">
+          <g id="Manouk_Compleet" class="huiskamer">
             <g id="Manouk">
               <path class="cls-29"
                 d="M1685.42,768.43c5.36,23.98-3.07,48.21-6.99,71.73-1.06,6.37-1.83,12.78-2.13,19.23s-.28,13.31-.81,19.95c-.92,11.61-4.24,22.98-8.88,33.67-5.41,12.46-12.35,24.18-19.3,35.83-2.22,3.73,3.59,7.11,5.81,3.39,12.54-21.05,25.3-42.9,28.54-67.6,1.68-12.81,.76-25.78,2.61-38.59,1.81-12.5,4.93-24.77,7.1-37.2,2.44-13.97,3.65-28.23,.52-42.2-.4-1.77-2.45-2.81-4.14-2.35-1.83,.5-2.75,2.36-2.35,4.14h.02Z" />
@@ -818,7 +818,7 @@
           </g>
         </a>
         <a href="ben.html">
-          <g id="Ben_Compleet">
+          <g id="Ben_Compleet" huiskamer>
             <g id="Ben">
               <path class="cls-62"
                 d="M1103.69,339.17c4.64-5.86,8.3-12.22,11-19.19l-6.37,1.68c4.34,5.33,10.26,9.18,16.53,11.87,3.35,1.43,6.77,2.64,10.28,3.64,1.63,.46,3.26,.89,4.9,1.28,.75,.18,1.51,.36,2.26,.53,.43,.1,.87,.19,1.3,.3,.17,.04,.35,.09,.52,.13,.47,.13,.2,.21,.07,.02-.3-.43-.53-.64-.78-1.1-.34-.66-.11-.26-.16,.28s-.13,1.05-.2,1.58l-.46,3.66-.92,7.31,4.83-3.68c-13.77-4.77-27.73-8.97-41.84-12.59l1.68,6.37,9-9.78h-5.39c4.84,4.17,10.49,7.29,16.68,8.95,1.41,.38,2.85,.68,4.29,.89,.98,.14,1.95,.26,2.93,.37,.77,.09,1.15,.12,1.58,.2,.78,.15,1.56,.3,2.3,.58,.3,.11,.01-.03,.42,.2,.05,.03,.92,.66,.46,.27,.24,.2,.46,.43,.66,.67,.18,.2,.16,.19-.04-.03l.19,.32c.19,.36,.22,.43,.1,.2-.11-.23-.1-.15,.03,.23l-.04-.31c-.01,.46,0,.48,.04,.06l4.69-2.66c-5.49-2.26-10.95-4.79-16.63-6.52-2.86-.87-5.78-1.41-8.76-1.65-.67-.05-1.35-.09-2.02-.15-.34-.03-.67-.06-1.01-.09-.19-.02-.59-.09-.18-.02-.65-.11-1.28-.27-1.92-.45-.17-.05-.55-.21-.18-.04-.36-.16-.69-.37-1.03-.58-1.74-1.1-4.2-.36-5.22,1.37-1.07,1.84-.38,4.11,1.37,5.22,2.58,1.64,5.57,2.04,8.56,2.26,2.79,.21,5.09,.53,7.91,1.36,5.84,1.72,11.45,4.34,17.07,6.66,1.8,.74,4.35-.82,4.69-2.66,.76-4.05-1.2-7.84-4.73-9.91-1.56-.92-3.35-1.42-5.13-1.7-1.92-.31-3.61-.41-5.12-.67s-3.14-.66-4.67-1.13-2.72-.93-3.95-1.5c-2.94-1.38-5.78-3.21-7.96-5.08-1.51-1.3-3.91-1.61-5.39,0l-9,9.78c-1.89,2.06-1.2,5.63,1.68,6.37,14.11,3.62,28.07,7.82,41.84,12.59,1.13,.39,2.42,.02,3.32-.68,1.03-.79,1.35-1.75,1.5-2.99l.86-6.83c.26-2.05,.76-4.21,.75-6.27,0-2.88-1.77-4.97-4.42-5.89-1.66-.58-3.48-.83-5.18-1.26-3.47-.86-6.92-1.84-10.28-3.07-.79-.29-1.57-.59-2.35-.91-.61-.25,.09,.05-.51-.22-.47-.21-.94-.42-1.4-.64-1.61-.76-3.18-1.59-4.7-2.52-.81-.49-1.6-1.02-2.36-1.56-.15-.11-.31-.22-.46-.33-.52-.37,.02,.03-.28-.21-.35-.27-.68-.55-1.02-.84-1.54-1.32-2.95-2.77-4.24-4.35-.83-1.02-2.5-1.31-3.71-.98-1.38,.38-2.17,1.39-2.66,2.66-2.05,5.3-5.5,11.35-9.04,15.83-1.28,1.61-1.57,3.82,0,5.39,1.33,1.33,4.11,1.62,5.39,0h0l.03-.04Z" />
@@ -934,7 +934,7 @@
           </g>
         </a>
         <a href="kaylee.html">
-          <g id="Kaylee_Compleet">
+          <g id="Kaylee_Compleet" class="huiskamer">
             <g id="Kaylee">
               <g>
                 <path class="cls-30"
@@ -1102,7 +1102,7 @@
           </g>
         </a>
         <a href="brian.html">
-          <g id="Brian_Compleet">
+          <g id="Brian_Compleet"class="huiskamer">
             <g id="Brian">
               <g>
                 <path class="cls-45"
@@ -1206,5 +1206,15 @@
 
 
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js" integrity="sha512-5/OHwmQzDSBS0Ous4/hlYoWLHd06/d2r7LdKZQVBXOA6PvOqWVXtdboiLTU7lQTGyVoKVTNkwi0ol4gHGlw5ww==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/plugins/CSSPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/MotionPathPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="myScript.js"> </script>
+<script src="Home.js"> </script>
 
 </html>
