--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
   <header>
     <div class="Titel">
-      <h1>FC Huisgenoten</h1>
+      <h1>FC &nbsp; Huisgenoten</h1>
     </div>
-    
+
     <div class="headerWrapper">
       <?xml version="1.0" encoding="UTF-8"?><svg id="Laag_1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080">
         <defs>
