--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
             </text>
           </g>
         </a>
-        <g id="stoel">
+        <g id="stoel" class="huisgenoten">
           <g>
             <path class="cls-49"
               d="M817.06,705.56c33.47-9.38,68.9,6.62,103.67,4.75,9.28-.5,18.42-2.27,27.53-4.04l50.54-9.81c2.14,15.01,3.4,30.14,3.78,45.29,.03,1.24,0,2.64-.92,3.5-.77,.72-1.92,.84-2.98,.92-60.48,4.8-121.82,9.56-181.48-1.28-1.18-17.56-2.04-35.14-2.56-52.74" />
