--- a/brian.html
+++ b/brian.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+    <title>Showcase Brian</title>
     <link rel="stylesheet" href="styles/brian.css">
     <link rel="stylesheet" href="styles/main.css">
 
@@ -2599,7 +2599,7 @@
         </article>
 
         <div class="buttonContainer container">
-            <button class="showcaseButton" onclick="openShowcase('1')">React-native App</button>
+            <button id="active" class="showcaseButton" onclick="openShowcase('1')">React-native App</button>
             <button class="showcaseButton" onclick="openShowcase('2')">Design system</button>
             <button class="showcaseButton" onclick="openShowcase('3')">Lottie animations</button>
         </div>
