--- a/kaylee.html
+++ b/kaylee.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+    <title>Showcase Kaylee</title>
     <link rel="stylesheet" href="styles/kaylee.css">
     <link rel="stylesheet" href="styles/main.css">
 
