--- a/rosa.html
+++ b/rosa.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+    <title>Showcase Rosa</title>
     <link rel="stylesheet" href="styles/rosa.css">
     <link rel="stylesheet" href="styles/main.css">
     <title> Dit is een titel</title>
