--- a/brian.html
+++ b/brian.html
@@ -15,7 +15,7 @@
                 <a class="nav-item home" href="index.html"><li>Home</li></a>
                 <a class="nav-item ben" href="ben.html"><li>Ben</li></a>
                 <a class="nav-item brian" href="brian.html"><li>Brian</li></a>
-                <a class="nav-item kaylee" href="kaylee.html" class="active"><li>Kaylee</li></a>
+                <a class="nav-item kaylee" href="kaylee.html"><li>Kaylee</li></a>
                 <a class="nav-item manouk" href="manouk.html"><li>Manouk</li></a>
                 <a class="nav-item rosa" href="rosa.html"><li>Rosa</li></a>
             </ul>     
