--- a/brian.html
+++ b/brian.html
@@ -2599,14 +2599,14 @@
         </article>
 
         <div class="buttonContainer container">
-            <button id="active" class="showcaseButton" onclick="openShowcase('1')">React-native App</button>
-            <button class="showcaseButton" onclick="openShowcase('2')">Design system</button>
-            <button class="showcaseButton" onclick="openShowcase('3')">Lottie animations</button>
+            <button id="1" class="showcaseButton" onclick="openShowcase('1')">React-native App</button>
+            <button id="2" class="showcaseButton" onclick="openShowcase('2')">Design system</button>
+            <button id="3" class="showcaseButton" onclick="openShowcase('3')">Lottie animations</button>
         </div>
 
 
 
-        <div id="1" class="w3-container Showcase">
+        <div id="showcase1" class="w3-container Showcase">
             <article>
                 <section>
                     <div class="container">
@@ -2633,7 +2633,7 @@
                 </section>
             </article>
         </div>
-        <div id="2" class="w3-container Showcase" style="display:none">
+        <div id="showcase2" class="w3-container Showcase" style="display:none">
             <article>
                 <section>
                     <div class="container">
@@ -2686,7 +2686,7 @@
                 </section>
             </article>
         </div>
-        <div id="3" class="w3-container Showcase" style="display:none">
+        <div id="showcase3" class="w3-container Showcase" style="display:none">
             <article>
                 <section>
                     <div class="container">
