--- a/rosa.html
+++ b/rosa.html
@@ -2583,14 +2583,14 @@
             </article>
 
             <div class="buttonContainer container">
-                <button class="showcaseButton" onclick="openShowcase('1')">Showcase 1</button>
-                <button class="showcaseButton" onclick="openShowcase('2')">Showcase 2</button>
-                <button class="showcaseButton" onclick="openShowcase('3')">Showcase 3</button>
+                <button id="1" class="showcaseButton" onclick="openShowcase('1')">1</button>
+                <button id="2" class="showcaseButton" onclick="openShowcase('2')">2</button>
+                <button id="3" class="showcaseButton" onclick="openShowcase('3')">3</button>
             </div>
 
 
 
-            <div id="1" class="w3-container Showcase">
+            <div id="showcase1" class="w3-container Showcase">
                 <article>
                     <section>
                         <div class="container">
@@ -2625,7 +2625,7 @@
                     </section>
                 </article>
             </div>
-            <div id="2" class="w3-container Showcase" style="display:none">
+            <div id="showcase2" class="w3-container Showcase" style="display:none">
                 <article>
                     <section>
                         <div class="container">
@@ -2660,7 +2660,7 @@
                     </section>
                 </article>
             </div>
-            <div id="3" class="w3-container Showcase" style="display:none">
+            <div id="showcase3" class="w3-container Showcase" style="display:none">
                 <article>
                     <section>
                         <div class="container">
